--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,8 @@
     --card: 0 0% 100%;
     --card-foreground: 222.2 47.4% 11.2%;
 
-    --primary: 222.2 47.4% 11.2%;
+    /*--primary: 222.2 47.4% 11.2%;*/
+    --primary: 232 81% 54%;
     --primary-foreground: 210 40% 98%;
 
     --secondary: 210 40% 96.1%;
@@ -74,8 +75,14 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
+
+  container {
+    @apply max-w-[1080px] mx-auto;
+  }
 }
+
